--- a/templates/engineer.html
+++ b/templates/engineer.html
@@ -6,8 +6,8 @@
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: ${engineer.id}</li>
-            <li class="list-group-item">Email: Email: <a href="mailto:{{ email }}">${engineer.email}</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/${engineer.github}" target="_blank" rel="noopener noreferrer">{{ github }}</a></li>
+            <li class="list-group-item">Email: ${engineer.email}</li>
+            <li class="list-group-item">GitHub: ${engineer.github}</li>
         </ul>
     </div>
 </div>
