--- a/templates/intern.html
+++ b/templates/intern.html
@@ -6,7 +6,7 @@
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: ${intern.id}</li>
-            <li class="list-group-item">Email: <a href="mailto:{{ email }}">${intern.email}</a></li>
+            <li class="list-group-item">Email: ${intern.email}</li>
             <li class="list-group-item">School: ${intern.school}</li>
         </ul>
     </div>
