--- a/templates/manager.html
+++ b/templates/manager.html
@@ -6,7 +6,7 @@
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: ${manager.id}</li>
-            <li class="list-group-item">Email: Email: <a href="mailto:{{ email }}">${manager.email}</a></li>
+            <li class="list-group-item">Email: ${manager.email}</li>
             <li class="list-group-item">Office number: ${manager.officeNumber}</li>
         </ul>
     </div>
